common/ast/tests/it/testdata/query-error.txt
---------- Input ----------
select * from customer join where a = b
---------- Output ---------
error: 
  --> SQL:1:29
  |
1 | select * from customer join where a = b
  |                             ^^^^^ expected `(`, `UNION`, `EXCEPT`, `INTERSECT`, `SELECT`, <Ident>, or 1 more ...


---------- Input ----------
select * from join customer
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | select * from join customer
  | ------        ^^^^ expected `(`, `UNION`, `EXCEPT`, `INTERSECT`, `SELECT`, <Ident>, or 1 more ...
  | |              
  | while parsing `SELECT ...`


---------- Input ----------
select * from customer natural inner join orders on a = b
---------- Output ---------
error: 
  --> SQL:1:50
  |
1 | select * from customer natural inner join orders on a = b
  |                                                  ^^ expected `(`, `.`, `AT`, <Ident>, <QuotedString>, `AS`, or 19 more ...


---------- Input ----------
select * order a
---------- Output ---------
error: 
  --> SQL:1:16
  |
1 | select * order a
  | ------         ^ expected `BY`
  | |               
  | while parsing `SELECT ...`


---------- Input ----------
select * order
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | select * order
  | ------        ^ expected `BY`
  | |             
  | while parsing `SELECT ...`


---------- Input ----------
select number + 5 as a, cast(number as float(255))
---------- Output ---------
error: 
  --> SQL:1:45
  |
1 | select number + 5 as a, cast(number as float(255))
  | ------                  ----                ^ expected `)`
  | |                       |                    
  | |                       while parsing `CAST(... AS ...)`
  | |                       while parsing expression
  | while parsing `SELECT ...`


---------- Input ----------
select 1 1
---------- Output ---------
error: 
  --> SQL:1:10
  |
1 | select 1 1
  |          ^ expected <Ident>, <QuotedString>, `AS`, `,`, `FROM`, `WHERE`, or 11 more ...


